# ds

./: .gitignore  CNAME  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
ds_ue_book/: _config.yml  _toc.yml  intro.md  references.bib
ds_ue_book/_static/: tracking.js
ds_ue_book/narzedzia_ds/: biblioteki_w_pythonie.ipynb  wprowadzenie.md
ds_ue_book/uczenie_maszynowe_wstep/: blad_obciazenia_i_wariancji.ipynb  elementy_teorii_colt.ipynb  kluczowe_pojecia.md  wprowadzenie.md  zadania_i_metryki_w_ml.ipynb
ds_ue_book/uczenie_maszynowe_wstep/metryki_ml/: grupowanie.ipynb  klasyfikacja.ipynb  klasyfikacja_probabilistyczna.ipynb  metryki_ml_wstep.md  regresja.ipynb
ds_ue_book/wprowadzenie/: autorzy.md  cytowanie.md  notacja_oznaczenia.md  wspolpraca.md  zalozenia.md
ds_ue_book/zalaczniki/: bibliografia.md  indeks_pojec.md  zalaczniki.md
