[tool.poetry]
name = "dsbook"
version = "0.1.0"
description = "Source code of the DS book."
authors = ["maddataanalyst <filip.wojcik@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^1.0.2"
jupyterlab = "^4.2.3"
matplotlib = "^3.9.0"
numpy = "<2.0.0"
pyppeteer = "^2.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
sphinx-proof = "^0.1.3"
mlxtend = "^0.23.1"
tqdm = "^4.66.5"
polars = "^1.5.0"
torch = {version = "^2.4.0+cpu", source = "pytorch_repo"}
torchmetrics = "^1.4.1"
pytorch-lightning = "^2.4.0"
optuna = "^3.6.1"
statsmodels = "^0.14.2"
ipywidgets = "^8.1.4"
plotly = "^5.23.0"
statsforecast = "^1.7.6"
cookiecutter = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch_repo"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"
